--- a/TelaLogin/Css/style.css
+++ b/TelaLogin/Css/style.css
@@ -1,6 +1,6 @@
 body
 {
-    background: url("/Images/ifsp_aereo.jpg")no-repeat;
+    background: url("../Images/ifsp_aereo.jpg")no-repeat;
     -moz-background-size:100% 100%;
     -o-background-size:100% 100%;
     background-size: 100%;
